correct navbar overspill

--- a/style.css
+++ b/style.css
@@ -156,10 +156,10 @@ a:hover {
   background-color: #ff9000;
 }
 
-a {
+/* a {
   width: 100%;
   max-width: 400px;
-}
+} */
 
 /* section:before {
     height: 54px;
